# PyCloudDetectVHR

./: .gitignore  README.md  foo.csv  pyproject.toml
pycvhr/: __init__.py  classes.py  cli.py  main.py  raster_utils.py  utils.py
pycvhr/core/: losses.py  optimizers.py
